# SID-api

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  notificacoes_count.parquet  pyproject.toml  requirements.txt  sample.env  test.env  test_shp.py  vercel.json
alembic/: env.py
alembic/versions/: 19da2bc01207_models_for_search.py  3b4dfad17c14_section_and_article_tables.py  3e1c63916599_improve_article_versions.py  48306723aa33_user_profile.py  4aabb2eb51c8_initial_migration.py  86a690d5dd70_general_models.py  b0e8d3e2d09d_add_password.py  c442f46fa298_update_enums.py  c45f0eff8cca_add_sign_up_motivation_and_role.py  f2a13f7b0db1_versions.py
app/: database.py  logger.py  main.py  models.py
app/api/: article.py  data.py  search.py  user.py  version.py
app/core/: auth.py  config.py
app/crud/: article.py  user.py  version.py
app/schemas/: article.py  data.py  user.py  version.py
